link de las series agregados

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="nav">
         <!-- Deberia contener el mismo link de la pagina para ser una vuelta al inicio -->
-        <a href="#" class="nameLogo"><strong>NETSOTO</strong></a>
+        <a href="#" class="nameLogo"><b>NETSOTO</b></a>
         <div class="nav_menu">
             <ul class="table_primary_nav">
                 <li class="nav_tap">
@@ -78,7 +78,7 @@
                             <img class="movie-img"src="https://es.web.img2.acsta.net/pictures/14/07/01/13/37/581497.jpg" alt="">
                             <ul>
                                 <li class="title" id="title">Titulo <strong>CORAZONES DE ACERO</strong></li>
-                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>15/09/1994</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>15/10/1994</strong></li>
                             </ul>
                             <a href="https://youtu.be/lqgfXkSh4x0"><button class="button-ver">Ver trailer</button></a>
                         </div>
@@ -108,7 +108,7 @@
                             <img src="https://www.ecartelera.com/carteles/3800/3851/005_m.jpg" alt="" class="movie-img">
                             <ul>
                                 <li class="title" id="title">Titulo <strong>INTERSTELLAR</strong></li>
-                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>26/09/2014</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>26/10/2014</strong></li>
                             </ul>
                             <a href="https://youtu.be/FzNFDRgA0wk"><button class="button-ver">Ver trailer</button></a>
                         </div>
@@ -129,44 +129,92 @@
                 <Section id="trailers_series"><h3 id="namemovie">Series</h3></Section>
                 <ul>
                     <li class="series">
-                        <a href="#" class="series-link">
+                        <div  class="series-link">
                             <img src="https://es.web.img3.acsta.net/c_310_420/pictures/18/10/31/17/34/2348073.jpg" alt="" class="series-img">
-                        </a>
+                            <ul>  
+                                <li class="title" id="title">Titulo <strong>RICK AND MORTY</strong></li>
+                                <li class="title" id="title">Temporada <strong>6</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>04/09/2022</strong></li>
+                            </ul>
+                            <a href="https://youtu.be/P9WZhGMlDBE"><button class="button-ver">Ver trailer</button></a>
+                        </div>
                     </li>
                     <li class="series">
-                        <a href="" class="series-link">
+                        <div class="series-link">
                             <img src="https://www.cine.com/media/series/30_w500.jpg" alt="" class="series-img">
-                        </a>
+                            <ul>  
+                                <li class="title" id="title">Titulo <strong>BREAKING BAD</strong></li>
+                                <li class="title" id="title">Temporada <strong>5</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>15/07/2012</strong></li>
+                            </ul>
+                            <a href="https://youtu.be/3oFofYisAko"><button class="button-ver">Ver trailer</button></a>
+                        </div>
                     </li>
                     <li class="series">
-                        <a href="" class="series-link">
+                        <div class="series-link">
                             <img src="https://www.cartelera.com.uy/imagenes_espectaculos/moviedetail13/30076.jpg" alt="" class="series-img">
-                        </a>
+                            <ul>  
+                                <li class="title" id="title">Titulo <strong>BETTER CALL SAUL</strong></li>
+                                <li class="title" id="title">Temporada <strong>6</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>18/04/2022</strong></li>
+                            </ul>
+                            <a href="https://youtu.be/30RIP7LYPXg"><button class="button-ver">Ver trailer</button></a>
+                        </div>
                     </li>
                     <li class="series">
-                        <a href="" class="series-link">
+                        <div class="series-link">
                             <img src="http://4.bp.blogspot.com/-UKiQt6LHxL0/VN2DCsgLNEI/AAAAAAAAALw/I1xrsDRzVjs/s1600/the_walking_dead.jpg" alt="" class="series-img">
-                        </a>
+                            <ul>  
+                                <li class="title" id="title">Titulo <strong>THE WALKING DEAD</strong></li>
+                                <li class="title" id="title">Temporada <strong>11</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>31/10/2022</strong></li>
+                            </ul>
+                            <a href="https://youtu.be/uwgohmYnDu0"><button class="button-ver">Ver trailer</button></a>
+                        </div>
                     </li>
                     <li class="series">
-                        <a href="" class="series-link">
+                        <div class="series-link">
                             <img src="https://pics.filmaffinity.com/The_Punisher_Serie_de_TV-727707803-large.jpg" alt="" class="series-img">
-                        </a>
+                            <ul>  
+                                <li class="title" id="title">Titulo <strong>PUNISHER</strong></li>
+                                <li class="title" id="title">Temporada <strong>2</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>18/01/2019</strong></li>
+                            </ul>
+                            <a href="https://youtu.be/MKw33EBiQQ8"><button class="button-ver">Ver trailer</button></a>
+                        </div>
                     </li>
                     <li class="series">
-                        <a href="" class="series-link">
-                            <img src="https://i.pinimg.com/564x/75/a5/8f/75a58fbaeda80acf5cf80732686402be.jpg" alt="" class="series-img">
-                        </a>
+                        <div class="series-link">
+                            <img id="bigname" src="https://i.pinimg.com/564x/75/a5/8f/75a58fbaeda80acf5cf80732686402be.jpg" alt="" class="series-img">
+                            <ul>  
+                                <li class="title" id="title">Titulo<strong>THE END OF THE F**CKING WORLD</strong></li>
+                                <li class="title" id="title">Temporada <strong>6</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>04/09/2022</strong></li>
+                            </ul>
+                            <a href="https://youtu.be/YJbpBijpwcU"><button class="button-ver">Ver trailer</button></a>
+                        </div>
                     </li>
                     <li class="series">
-                        <a href="" class="series-link">
+                        <div class="series-link">
                             <img src="https://es.web.img2.acsta.net/pictures/14/01/13/10/06/336848.jpg" alt="" class="series-img">
-                        </a>
+                            <ul>  
+                                <li class="title" id="title">Titulo <strong>VIKINGS</strong></li>
+                                <li class="title" id="title">Temporada <strong>6</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>30/12/2020</strong></li>
+                            </ul>
+                            <a href="https://youtu.be/2LDKmeHnrdI"><button class="button-ver">Ver trailer</button></a>
+                        </div>
                     </li>
                     <li class="series">
-                        <a href="" class="series-link">
+                        <div class="series-link">
                             <img src="https://cl.buscafs.com/www.tomatazos.com/public/uploads/images/267532/267532_173x251.jpg" alt="" class="series-img">
-                        </a>
+                            <ul>  
+                                <li class="title" id="title">Titulo <strong>PEAKY BLINDERS</strong></li>
+                                <li class="title" id="title">Temporada <strong>6</strong></li>
+                                <li class="fecha" id="title">Fecha de lanzamiento <br><strong>27/02/2022</strong></li>
+                            </ul>
+                            <a href="https://youtu.be/NknSkTrOWrk"><button class="button-ver">Ver trailer</button></a>
+                        </div>
                     </li>
                 </ul>
             </div>
