Agregue el CRUD

--- a/Client/index.html
+++ b/Client/index.html
@@ -59,7 +59,7 @@
   
                 <div class="form-btn">
                     <button class="form-button" type="submit">Iniciar sesión</button>
-                    <button class="form-button" id="cerrar-login">Salir</button>  
+                    <button class="form-button" >Salir</button>  
                 </div>
 
               </form>    
@@ -201,7 +201,7 @@
                     </li>
                     <li class="series">
                         <div class="series-link">
-                            <img src="https://pics.filmaffinity.com/The_Punisher_Serie_de_TV-727707803-large.jpg" alt="" class="series-img">
+                            <img src="https://terrigen-cdn-dev.marvel.com/content/qa/1x/36066f-Punisher-Key-Art-960x1422.jpg" alt="" class="series-img">
                             <ul>  
                                 <li class="title" id="title">Titulo <strong>PUNISHER</strong></li>
                                 <li class="title" id="title">Temporada <strong>2</strong></li>
